--- a/now.html
+++ b/now.html
@@ -112,7 +112,7 @@
         </div>
       </section>
 
-      <section class="content-section">
+      <section class="content-section pc-section">
         <div class="section-inner">
           <article class="content-article article-channel-details">
             <div class="article-inner">
@@ -517,6 +517,169 @@
                         <li class="detail-subs subs-views">17,115</li>
                         <li class="detail-subs subs-likes">17,115</li>
                         <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="content-section mo-section">
+        <div class="section-inner">
+          <article class="content-article article-channel-details">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3 class="add-icon">CHANNEL DETAILS</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-card-wrap detail-card-wrap">
+                  <ul class="detail-card-list">
+                    <li class="card-item card-sns">
+                      <h4 class="item-title">SNS</h4>
+                      <ul class="card-sub-list">
+                        <li class="sub-item item-posts">
+                          <p class="sub-title">POSTS</p>
+                          <div class="sub-subs chart-horicontal"></div>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title">ENGAGEMENT</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-comments">COMMENTS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-views">VIEWS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-likes">LIKES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-shares">SHARES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="card-item card-community">
+                      <h4 class="item-title">COMMUNITY</h4>
+                      <ul class="card-sub-list">
+                        <li class="sub-item item-posts">
+                          <p class="sub-title">POSTS</p>
+                          <div class="sub-subs chart-horicontal"></div>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title">ENGAGEMENT</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-comments">COMMENTS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-views">VIEWS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-likes">LIKES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-shares">SHARES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="card-item card-blog">
+                      <h4 class="item-title">BLOG</h4>
+                      <ul class="card-sub-list">
+                        <li class="sub-item item-posts">
+                          <p class="sub-title">POSTS</p>
+                          <div class="sub-subs chart-horicontal"></div>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title">ENGAGEMENT</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-comments">COMMENTS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-views">VIEWS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-likes">LIKES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-shares">SHARES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="card-item card-cafe">
+                      <h4 class="item-title">CAFE</h4>
+                      <ul class="card-sub-list">
+                        <li class="sub-item item-posts">
+                          <p class="sub-title">POSTS</p>
+                          <div class="sub-subs chart-horicontal"></div>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title">ENGAGEMENT</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-comments">COMMENTS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-views">VIEWS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-likes">LIKES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-shares">SHARES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="card-item card-news">
+                      <h4 class="item-title">NEWS</h4>
+                      <ul class="card-sub-list">
+                        <li class="sub-item item-posts">
+                          <p class="sub-title">POSTS</p>
+                          <div class="sub-subs chart-horicontal"></div>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title">ENGAGEMENT</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-comments">COMMENTS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-views">VIEWS</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-likes">LIKES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
+                        <li class="sub-item item-engagement">
+                          <p class="sub-title sub-shares">SHARES</p>
+                          <span class="sub-subs sub-num">17,115</span>
+                        </li>
                       </ul>
                     </li>
                   </ul>
