--- a/header.html
+++ b/header.html
@@ -1,13 +1,13 @@
 <header>
   <div class="header-inner clearFix">
     <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
-    <p class="mobile-menu-btn">
+    <div class="mobile-menu-btn">
       <a href="#" class="link-area">
-        <span class="menu-line line-1"></span>
-        <span class="menu-line line-2"></span>
-        <span class="menu-line line-3"></span>
+        <p class="menu-line line-1"></p>
+        <p class="menu-line line-2"></p>
+        <p class="menu-line line-3"></p>
       </a>
-    </p>
+    </div>
     <button id="moDetailOpen" class="search-slide-btn"></button>
 
     <div class=" search-area clearFix">
