--- a/header.html
+++ b/header.html
@@ -2,6 +2,9 @@
   <div class="header-inner clearFix">
     <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
     <div class="mobile-menu-btn">
+      <!-- <p class="menu-line line-1"></p>
+        <p class="menu-line line-2"></p>
+        <p class="menu-line line-3"></p> -->
       <a href="#" class="link-area">
         <p class="menu-line line-1"></p>
         <p class="menu-line line-2"></p>
