--- a/now.html
+++ b/now.html
@@ -135,13 +135,14 @@
                       </ul>
                     </li>
                     <li class="detail-item item-subs sns-subs">
+                      <p class="item-subs-opener"></p>
                       <!-- 항목별 데이터 -->
                       <ul class="item-sub-list detail-subs-list">
                         <!-- 첫번째 .item-sub-list는 SNS, 블로그, 카페 등의 큰 카테고리 -->
                         <li class="detail-subs subs-channel">SNS</li>
                         <li class="detail-subs subs-posts">
                           <div class="chart-horizontal">
-                            <div class="total-posts">
+                            <div class="total-posts" id="detailPostSNS">
                               <!-- 주제어의 총 포스트량 => 100% -->
                               <p class="mid-posts detailPostSNS">
                                 <!-- SNS의 총 포스트량 => 주제어 대비 비율 -->
@@ -239,6 +240,7 @@
                       </ul>
                     </li>
                     <li class="detail-item item-subs community-subs">
+                      <p class="item-subs-opener"></p>
                       <ul class="item-sub-list detail-subs-list">
                         <li class="detail-subs subs-channel">커뮤니티</li>
                         <li class="detail-subs subs-posts">
@@ -390,6 +392,7 @@
                       </ul>
                     </li>
                     <li class="detail-item item-subs blog-subs">
+                      <p class="item-subs-opener"></p>
                       <ul class="item-sub-list detail-subs-list">
                         <li class="detail-subs subs-channel">블로그</li>
                         <li class="detail-subs subs-posts">
@@ -446,6 +449,7 @@
                       </ul>
                     </li>
                     <li class="detail-item item-subs cafe-subs">
+                      <p class="item-subs-opener"></p>
                       <ul class="item-sub-list detail-subs-list">
                         <li class="detail-subs subs-channel">카페</li>
                         <li class="detail-subs subs-posts">
@@ -502,6 +506,7 @@
                       </ul>
                     </li>
                     <li class="detail-item item-subs news-subs">
+                      <p class="item-subs-opener"></p>
                       <ul class="item-sub-list detail-subs-list">
                         <li class="detail-subs subs-channel">뉴스</li>
                         <li class="detail-subs subs-posts">
@@ -720,9 +725,8 @@
         </div>
       </section>
 
-      <section class="content-section">
+      <section class="content-section now-ranking-section">
         <div class="section-inner">
-
 
           <article class="content-article article-keyword-association width-4-2">
             <div class="article-inner">
