--- a/hottest.html
+++ b/hottest.html
@@ -69,7 +69,7 @@
           <article class="content-article article-hottest-cafes width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">HOTTEST CAFES</h3>
+                <h3 class="add-icon">CAFE TOP 5</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -132,7 +132,7 @@
           <article class="content-article article-hottest-blogers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">HOTTEST BLOGERS</h3>
+                <h3 class="add-icon">BLOGER TOP 5</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -195,7 +195,7 @@
           <article class="content-article article-hottest-influencers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">HOTTEST INFLUENCERS</h3>
+                <h3 class="add-icon">SNS TOP 5</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -262,7 +262,7 @@
           <article class="content-article article-hottest-top10">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">HOTTEST POST TOP 10</h3>
+                <h3 class="add-icon">POST TOP 10</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap hottest-wide">
