--- a/trend.html
+++ b/trend.html
@@ -75,14 +75,18 @@
                 <h3 class="add-icon">POST TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap">
-                  <div>
-
+                <div id="postTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
+                  <div class="trend-chart-wrap swiper-wrapper">
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-
+                  <div class="swiper-pagination"></div>
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left"></button>
-                    <button class="slide-btn slide-right"></button>
+                    <button class="slide-btn slide-left swiper-button-next"></button>
+                    <button class="slide-btn slide-right swiper-button-prev"></button>
                   </div>
                 </div>
               </div>
@@ -99,14 +103,18 @@
                 <h3 class="add-icon">ENGAGEMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap">
-                  <div>
-
+                <div id="enggTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
+                  <div class="trend-chart-wrap swiper-wrapper">
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-
+                  <div class="swiper-pagination"></div>
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left"></button>
-                    <button class="slide-btn slide-right"></button>
+                    <button class="slide-btn slide-left swiper-button-next"></button>
+                    <button class="slide-btn slide-right swiper-button-prev"></button>
                   </div>
                 </div>
               </div>
@@ -123,14 +131,18 @@
                 <h3 class="add-icon">SENTIMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap">
-                  <div>
-
+                <div id="stmtTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
+                  <div class="trend-chart-wrap swiper-wrapper">
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
+                    <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-
+                  <div class="swiper-pagination"></div>
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left"></button>
-                    <button class="slide-btn slide-right"></button>
+                    <button class="slide-btn slide-left swiper-button-next"></button>
+                    <button class="slide-btn slide-right swiper-button-prev"></button>
                   </div>
                 </div>
               </div>
@@ -738,11 +750,11 @@
                 <h3 class="add-icon">KEYWORD TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-rank-wrap swiper-container" dir="rtl">
-                  <div class="trend-rank-wrap swiper-wrapper">
+                <div id="kwdTrdSwpContainer" class="article-rank-wrap swiper-container" dir="rtl">
+                  <div id="kwdTrdSwpWrapper" class="trend-rank-wrap swiper-wrapper">
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 4월 1주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -813,7 +825,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 3월 5주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -884,7 +896,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 3월 4주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -955,7 +967,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 3월 3주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -1026,7 +1038,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 3월 2주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -1097,7 +1109,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 3월 1주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -1168,7 +1180,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 2월 4주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
@@ -1239,7 +1251,7 @@
                     </div>
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 2월 3주차</h4>
-                      <ul class="rank-list">
+                      <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
                           <span class="item-keyword">단어</span>
