--- a/trend.html
+++ b/trend.html
@@ -75,6 +75,16 @@
                 <h3 class="add-icon">POST TREND</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top clearFix">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
+                </div>
+
                 <div id="postTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
                   <div class="trend-chart-wrap swiper-wrapper">
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
@@ -83,12 +93,14 @@
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-                  <div class="swiper-pagination"></div>
+                  <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
                     <button class="slide-btn slide-left swiper-button-next"></button>
                     <button class="slide-btn slide-right swiper-button-prev"></button>
                   </div>
                 </div>
+
+
               </div>
             </div>
           </article>
@@ -103,6 +115,16 @@
                 <h3 class="add-icon">ENGAGEMENT TREND</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top clearFix">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
+                </div>
+
                 <div id="enggTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
                   <div class="trend-chart-wrap swiper-wrapper">
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
@@ -111,7 +133,7 @@
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-                  <div class="swiper-pagination"></div>
+                  <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
                     <button class="slide-btn slide-left swiper-button-next"></button>
                     <button class="slide-btn slide-right swiper-button-prev"></button>
@@ -131,6 +153,16 @@
                 <h3 class="add-icon">SENTIMENT TREND</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top clearFix">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
+                </div>
+
                 <div id="stmtTrdSwpContainer" class="article-chart-wrap swiper-container" dir="rtl">
                   <div class="trend-chart-wrap swiper-wrapper">
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
@@ -139,7 +171,7 @@
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                     <div class="trend-chart-list swiper-slide" dir="ltr"></div>
                   </div>
-                  <div class="swiper-pagination"></div>
+                  <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
                     <button class="slide-btn slide-left swiper-button-next"></button>
                     <button class="slide-btn slide-right swiper-button-prev"></button>
@@ -1321,7 +1353,7 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="swiper-pagination"></div>
+                  <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
                     <button class="slide-btn slide-left swiper-button-next"></button>
                     <button class="slide-btn slide-right swiper-button-prev"></button>
