--- a/now.html
+++ b/now.html
@@ -716,6 +716,14 @@
                 <h3 class="add-icon">SENTIMENT BY CHANNELS</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="method-select">
+                    <ul class="method-list">
+                      <li class="method-item now-on">POST</li>
+                      <li class="method-item">PERCENT</li>
+                    </ul>
+                  </div>
+                </div>
                 <div class="article-chart-wrap -wrap">
 
                 </div>
@@ -734,6 +742,15 @@
                 <h3 class="add-icon">KEYWORD ASSOCIATION</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="method-select">
+                    <ul class="method-list">
+                      <li class="method-item now-on">Cloud</li>
+                      <li class="method-item">Network</li>
+                      <li class="method-item">Table</li>
+                    </ul>
+                  </div>
+                </div>
                 <div class="article-chart-wrap -wrap">
 
                 </div>
