--- a/trend.html
+++ b/trend.html
@@ -75,7 +75,31 @@
                 <h3 class="add-icon">POST TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-content-top clearFix">
+                <div class="article-content-top">
+                  <div class="color-info">
+                    <ul class="color-list">
+                      <li class="color-item color-item-sns">
+                        <p class="item-color"></p>
+                        <span class="item-name">SNS</span>
+                      </li>
+                      <li class="color-item color-item-community">
+                        <p class="item-color"></p>
+                        <span class="item-name">Community</span>
+                      </li>
+                      <li class="color-item color-item-blog">
+                        <p class="item-color"></p>
+                        <span class="item-name">Blog</span>
+                      </li>
+                      <li class="color-item color-item-cafe">
+                        <p class="item-color"></p>
+                        <span class="item-name">Cafe</span>
+                      </li>
+                      <li class="color-item color-item-news">
+                        <p class="item-color"></p>
+                        <span class="item-name">News</span>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="period-select">
                     <ul class="period-list">
                       <li class="period-item">DAILY</li>
@@ -115,7 +139,27 @@
                 <h3 class="add-icon">ENGAGEMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-content-top clearFix">
+                <div class="article-content-top">
+                  <div class="color-info">
+                    <ul class="color-list">
+                      <li class="color-item color-item-views">
+                        <p class="item-color"></p>
+                        <span class="item-name">Views</span>
+                      </li>
+                      <li class="color-item color-item-comments">
+                        <p class="item-color"></p>
+                        <span class="item-name">Comments</span>
+                      </li>
+                      <li class="color-item color-item-likes">
+                        <p class="item-color"></p>
+                        <span class="item-name">Likes</span>
+                      </li>
+                      <li class="color-item color-item-shares">
+                        <p class="item-color"></p>
+                        <span class="item-name">Shares</span>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="period-select">
                     <ul class="period-list">
                       <li class="period-item">DAILY</li>
@@ -153,7 +197,23 @@
                 <h3 class="add-icon">SENTIMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-content-top clearFix">
+                <div class="article-content-top">
+                  <div class="color-info">
+                    <ul class="color-list">
+                      <li class="color-item color-item-posit">
+                        <p class="item-color"></p>
+                        <span class="item-name">긍정</span>
+                      </li>
+                      <li class="color-item color-item-neutral">
+                        <p class="item-color"></p>
+                        <span class="item-name">중립</span>
+                      </li>
+                      <li class="color-item color-item-negat">
+                        <p class="item-color"></p>
+                        <span class="item-name">부정</span>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="period-select">
                     <ul class="period-list">
                       <li class="period-item">DAILY</li>
