--- a/now.html
+++ b/now.html
@@ -764,6 +764,15 @@
                 <h3 class="add-icon">SENTIMENT KEYWORD</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="method-select">
+                    <ul class="method-list">
+                      <li class="method-item now-on">1~10위</li>
+                      <li class="method-item">11~20위</li>
+                      <li class="method-item">21~30위</li>
+                    </ul>
+                  </div>
+                </div>
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
                     <li class="rank-item item-title">
@@ -833,6 +842,15 @@
                 <h3 class="add-icon">KEYWORD RANKING</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="method-select">
+                    <ul class="method-list">
+                      <li class="method-item now-on">1~10위</li>
+                      <li class="method-item">11~20위</li>
+                      <li class="method-item">21~30위</li>
+                    </ul>
+                  </div>
+                </div>
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
                     <li class="rank-item item-title">
