--- a/trend.html
+++ b/trend.html
@@ -15,9 +15,7 @@
   <title>buzz ON</title>
 
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-
   <link rel="stylesheet" href="./src/css/style.css">
-
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
@@ -843,7 +841,7 @@
               </div>
               <div class="article-content">
                 <div id="kwdTrdSwpContainer" class="article-rank-wrap swiper-container" dir="rtl">
-                  <div id="kwdTrdSwpWrapper" class="trend-rank-wrap swiper-wrapper">
+                  <div class="trend-rank-wrap swiper-wrapper">
                     <div class="trend-rank-list swiper-slide">
                       <h4>22년 4월 1주차</h4>
                       <ul class="rank-list" dir="ltr">
