--- a/now.html
+++ b/now.html
@@ -717,6 +717,22 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
+                  <div class="color-info">
+                    <ul class="color-list">
+                      <li class="color-item color-item-posit">
+                        <p class="item-color"></p>
+                        <span class="item-name">긍정</span>
+                      </li>
+                      <li class="color-item color-item-neutral">
+                        <p class="item-color"></p>
+                        <span class="item-name">중립</span>
+                      </li>
+                      <li class="color-item color-item-negat">
+                        <p class="item-color"></p>
+                        <span class="item-name">부정</span>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="method-select">
                     <ul class="method-list">
                       <li class="method-item now-on">POST</li>
